Refactor to netlify function.

--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.0.9",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/app.js --exec babel-node --presets babel-preset-env",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "netlify-lambda serve lambda-src",
+    "lambda-build": "netlify-lambda build lambda-src",
+    "build": "NODE_ENV=production npm run lambda-build"
   },
   "author": "Alex Mejias",
   "license": "Apache-2.0",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.6",
-    "babel-preset-airbnb": "^2.5.3",
-    "babel-preset-env": "^1.7.0",
+    "@babel/runtime": "^7.4.5",
     "body-parser": "^1.19.0",
-    "express": "^4.16.3",
-    "nodemon": "^1.18.3"
+    "netlify-lambda": "^1.4.13"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.3",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-import": "^2.14.0",
